Adjusted the class enum to sftools Added option to load character in dungeon simulator from endpoint Added advanced mode to show Experimental tab (can be enabled by clicking 5 times in a row on BM Church header in credit section)

--- a/SFSimulator.Web/src/app/dialogs/credits-dialog/credits-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/credits-dialog/credits-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="bg-dark">
   <h1 class="pt-4 ps-4">Credits:</h1>
   <div class="content" mat-dialog-content>
-    <h5>BM Church</h5>
+    <h5 class="p-2" matRipple (click)="increment()">BM Church</h5>
     <ul><li class="bm-church">Koksuone</li><li class="bm-church">Mathire</li><li class="bm-church">Future</li><li class="bm-church">DrKuulJulian</li></ul>
     <p>
       Big thanks to whole BM Church, especially people listed above,<br />
@@ -14,7 +14,7 @@
       you are very lucky to make me sign NDA with you, otherwise you'd<br />
       be canceled.<br />
     </p>
-    <h5>Discord Tavern</h5>
+    <h5 matRipple class="p-2">Discord Tavern</h5>
     <ul><li class="tavern">mar21</li><li class="tavern">Timhot3p</li><li class="tavern">and many more...</li></ul>
     <p>
       Firstable I would really like to appreciate mar21 and all sftools<br />
@@ -33,7 +33,7 @@
       just making chat a better place. If not this discord I would stopped<br />
       playing sfgame a while ago.<br />
     </p>
-    <h5>Others</h5>
+    <h5 class="p-2" matRipple>Others</h5>
     <ul><li class="other">Caesar</li><li class="other">Venganzz</li><li class="other">crazi</li></ul>
     <p>
       If you read it, I really want to thank you Caesar. Whole idea of<br />
