--- a/SFSimulator.Web/src/app/layout/test/test.component.scss
+++ b/SFSimulator.Web/src/app/layout/test/test.component.scss
@@ -3,6 +3,10 @@ mat-form-field {
     max-width: 185px;
 }
 
+.bg-shadow {
+  background-color: #856bb3;
+}
+
 .bg-blue {
   border-radius: 5px;
   background-color: rgba(8, 87, 160, 0.4);
