--- a/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
@@ -1,15 +1,13 @@
 <div class="bg-dark">
   <h1 class="pt-3 px-4">Patch Notes: {{version}}</h1>
-  <div mat-dialog-content>
-    <p>Changed page background</p>
-    <p>Changed the look of the main form, result tables and result chart</p>
-    <p>Changed graphics of actions and events in Custom Schedule</p>
-    <p>Added "Add hydra head" action in Custom Schedule</p>
-    <p>Added validation messages for inputs</p>
+  <div class="content" mat-dialog-content>
+    <p>Added base stat gains from daily missions</p>
+    <p>Added option to copy/paste the character info in dugneon simulator</p>
+    <p>Added option to import character info from endpoint in dugneon simulator</p>
     <p>
-      Added experimental dungeon simulator <span><a href="/test">(click)</a></span>
+    Added option to enable advanced mode by clicking 5 times on "BM Church" in credits section.
+    It will make the experimental tab visible on the toolbar at the top.
     </p>
-    <p>Bug fix: Already loaded configuration couldn't be saved</p>
   </div>
   <div class="d-flex justify-content-end" mat-dialog-actions>
     <button [mat-dialog-close] mat-button>Don't care, bye</button>
