Updated patchnotes and version

--- a/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
@@ -1,13 +1,7 @@
 <div class="bg-dark">
   <h1 class="pt-3 px-4">Patch Notes: {{version}}</h1>
   <div class="content" mat-dialog-content>
-    <p>Added base stat gains from daily missions</p>
-    <p>Added option to copy/paste the character info in dugneon simulator</p>
-    <p>Added option to import character info from endpoint in dugneon simulator</p>
-    <p>
-    Added option to enable advanced mode by clicking 5 times on "BM Church" in credits section.
-    It will make the experimental tab visible on the toolbar at the top.
-    </p>
+    <p>Added option to set current calendar in simulation</p>
   </div>
   <div class="d-flex justify-content-end" mat-dialog-actions>
     <button [mat-dialog-close] mat-button>Don't care, bye</button>
