--- a/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
@@ -1,12 +1,9 @@
 <div class="bg-dark">
   <h1 class="pt-3 px-4">Patch Notes: {{version}}</h1>
   <ul class="content" mat-dialog-content>
-    <li>Added possibility to simulate until X base stats are reached</li>
-    <li>Added possibility to simulate arena gold gains</li>
-    <li>Added companions to experimental dungeon simulator</li>
-    <li>Added support for Necromancer class while polling data from SFTools</li>
-    <li>Saved configuration is now automatically loaded if there is only one entry saved</li>
-    <li>Fixed an error when character polled from SFTools has no guild</li>
+    <li>Added support for weekly tasks</li>
+    <li>Fixed a bug causing polling wrong stats in dungeon simulator</li>
+    <li>Improved performance in dungeon simulator</li>
   </ul>
   <div class="d-flex justify-content-end" mat-dialog-actions>
     <button [mat-dialog-close] mat-button>Don't care, bye</button>
