--- a/SFSimulator.Web/src/app/components/check-box/check-box.component.html
+++ b/SFSimulator.Web/src/app/components/check-box/check-box.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex" (click)="isChecked = !isChecked">
-  <div matRipple class="ctn" [class]="isChecked ? 'checked' : 'unchecked'">
+  <div matRipple class="ctn" [class]="getCheckboxClass()">
     <input type="checkbox" [disabled]="isDisabled" [(ngModel)]="isChecked"/>
     <mat-icon>hourglass_empty</mat-icon>
   </div>
