--- a/SFSimulator.Web/src/app/components/check-box/check-box.component.scss
+++ b/SFSimulator.Web/src/app/components/check-box/check-box.component.scss
@@ -28,6 +28,10 @@
   animation: de-gradient 300ms linear forwards;
 }
 
+.disabled {
+    background-image: linear-gradient(50deg, #808080, #808080) !important;
+}
+
 input {
     display: none;
 }
