--- a/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
+++ b/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
@@ -176,6 +176,9 @@
                 <check-box formControlName="doWeeklyTasks">
                   Do Weekly Tasks
                 </check-box>
+                <check-box class='pt-2' formControlName="drinkExtraWeeklyBeer">
+                  Drink Weekly Task Beer
+                </check-box>
 
               </div>
               <div class="col-xl-6 d-flex flex-column mt-3">
@@ -216,9 +219,6 @@
                 </mat-form-field>
                 <check-box formControlName="skipCalendar">
                   Skip Calendar
-                </check-box>
-                <check-box formControlName="drinkExtraWeeklyBeer">
-                  Drink Weekly Task Beer
                 </check-box>
                 <!--TO DO-->
                 <!--<check-box class="mt-3" formControlName="simulateDungeon">
