--- a/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
+++ b/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
@@ -46,7 +46,7 @@
                 <mat-form-field appearance="outline" class='mb-1'>
                   <mat-label>Mount</mat-label>
                   <mat-select formControlName="mountType">
-                    <mat-option *ngFor="let mount of mountType" [value]="mount">{{ mount }}</mat-option>
+                    <mat-option *ngFor="let mountEnum of mountType | enum" [value]="mountEnum.value">{{ mountEnum.key | wordSpace }}</mat-option>
                   </mat-select>
                   <mat-error showError [control]="form.mountType"></mat-error>
                 </mat-form-field>
@@ -129,63 +129,56 @@
           <ng-template matTabContent>
             <div class="row gx-1">
               <div class="col-xl-6 d-flex flex-column mt-3">
+                <check-box class='pt-2 mb-3' formControlName="expeditionsInsteadOfQuests"
+                           matTooltip="Note that expeditions are subject to change"
+                           [matTooltipPosition]="'right'">
+                  Expeditions Instead of Quests
+                </check-box>
                 <mat-form-field appearance="outline" class="mb-2">
                   <mat-label>Daily Thirst</mat-label>
                   <input matInput type="number" formControlName="dailyThirst" placeholder="0" min="0" max="320" step="20" />
                   <mat-error showError [control]="form.dailyThirst"></mat-error>
                 </mat-form-field>
-                <mat-form-field appearance="outline" class="mb-2">
-                  <mat-label>Quest Priority</mat-label>
-                  <mat-select formControlName="questPriority">
-                    <mat-option *ngFor="let priority of questPriority" [value]="priority">{{priority}}</mat-option>
-                  </mat-select>
-                  <mat-error showError [control]="form.questPriority"></mat-error>
-                </mat-form-field>
-                <mat-form-field appearance="outline" class="mb-2">
-                  <mat-label>Hybrid Ratio</mat-label>
-                  <input matInput type="number" formControlName="hybridRatio" placeholder="0" min="0" max="1" step="0.05"
-                         matTooltip="e.g. 1 xp = 4 gold then type 0.25"
-                         [matTooltipPosition]="'right'" />
-                  <mat-error showError [control]="form.hybridRatio"></mat-error>
-                </mat-form-field>
-                <check-box class="mb-3"
-                                  formControlName="switchPriority"
-                                  matTooltip="Determines if character switches quest priority after X level"
-                                  [matTooltipPosition]="'right'">
-                  Should switch priority?
-                </check-box>
-                <mat-form-field appearance="outline" class="mb-2">
-                  <mat-label>Switch level</mat-label>
-                  <input type="number" matInput formControlName="switchLevel" />
-                  <mat-error showError [control]="form.switchLevel"></mat-error>
-                </mat-form-field>
-                <mat-form-field appearance="outline" class="mb-2">
-                  <mat-label>Priority after switch</mat-label>
-                  <mat-select formControlName="priorityAfterSwitch">
-                    <mat-option *ngFor="let priority of questPriority" [value]="priority">{{priority}}</mat-option>
-                  </mat-select>
-                  <mat-error showError [control]="form.priorityAfterSwitch"></mat-error>
-                </mat-form-field>
-                <mat-form-field appearance="outline" class="mb-2">
-                  <mat-label>Arena fights for gold</mat-label>
-                  <input matInput type='number' formControlName="fightsForGold" placeholder='0' step='1'
-                        matTooltip='Amount of arena fights with maximum gold as reward (it will not exceed the cap)'
-                        matTooltipPosition='right'/>
-                  <mat-error showError [control]="form.fightsForGold"></mat-error>
-                </mat-form-field>
-                <check-box formControlName="doWeeklyTasks">
-                  Do Weekly Tasks
-                </check-box>
-                <check-box class='pt-2' formControlName="drinkExtraWeeklyBeer">
-                  Drink Weekly Task Beer
-                </check-box>
 
-              </div>
-              <div class="col-xl-6 d-flex flex-column mt-3">
+                <!-- Normal Quests -->
+
+                <div *ngIf='!expeditionsEnabled'>
+                  <mat-form-field appearance="outline" class="mb-2">
+                    <mat-label>Quest Priority</mat-label>
+                    <mat-select formControlName="questPriority">
+                      <mat-option *ngFor="let priority of questPriority | enum" [value]="priority.value">{{ priority.key | wordSpace }}</mat-option>
+                    </mat-select>
+                    <mat-error showError [control]="form.questPriority"></mat-error>
+                  </mat-form-field>
+                  <mat-form-field appearance="outline" class="mb-2">
+                    <mat-label>Hybrid Ratio</mat-label>
+                    <input matInput type="number" formControlName="hybridRatio" placeholder="0" min="0" max="1" step="0.05"
+                           matTooltip="e.g. 1 xp = 4 gold then type 0.25"
+                           [matTooltipPosition]="'right'" />
+                    <mat-error showError [control]="form.hybridRatio"></mat-error>
+                  </mat-form-field>
+                </div>
+
+                <!-- Expeditions -->
+
+                <div *ngIf='expeditionsEnabled' [formGroup]='form.expeditionOptions'>
+                  <mat-form-field appearance="outline" class="mb-2">
+                    <mat-label>Avg Amount of Chests</mat-label>
+                    <input matInput type="number" formControlName="averageAmountOfChests" placeholder="0" step="0.05" min="0" max="2"/>
+                    <mat-error showError [control]="expeditionOptions.averageAmountOfChests"></mat-error>
+                  </mat-form-field>
+                  <mat-form-field appearance="outline" class="mb-2">
+                    <mat-label>Avg Star Bonus</mat-label>
+                    <input matInput type="number" formControlName="averageStarExperienceBonus" placeholder="0" step="0.05" min='1' max='1.3'/>
+                    <mat-error showError [control]="expeditionOptions.averageStarExperienceBonus"></mat-error>
+                  </mat-form-field>
+                </div>
+
+
                 <mat-form-field class="mb-2" appearance="outline">
                   <mat-label>Spin Amount</mat-label>
                   <mat-select formControlName='spinAmount'>
-                    <mat-option *ngFor="let spin of spinTactics" [value]="spin.value">{{spin.label}}</mat-option>
+                    <mat-option *ngFor="let spinEnum of spinTactic | enum" [value]="spinEnum.value">{{ spinEnum.key | wordSpace }}</mat-option>
                   </mat-select>
                   <mat-error showError [control]="form.spinAmount"></mat-error>
                 </mat-form-field>
@@ -204,9 +197,63 @@
                   </mat-select>
                   <mat-error showError [control]="form.schedule"></mat-error>
                 </mat-form-field>
-                <check-box class='mb-3' formControlName="drinkBeerOneByOne">
-                  Drink Beer One By One
+
+
+                <mat-form-field appearance="outline" class="mb-2">
+                  <mat-label>Arena fights for gold</mat-label>
+                  <input matInput type='number' formControlName="fightsForGold" placeholder='0' step='1'
+                        matTooltip='Amount of arena fights with maximum gold as reward (it will not exceed the cap)'
+                        matTooltipPosition='right'/>
+                  <mat-error showError [control]="form.fightsForGold"></mat-error>
+                </mat-form-field>
+
+              </div>
+              <div class="col-xl-6 d-flex flex-column mt-3">
+                <check-box class="pt-2 mb-3"
+                                  formControlName="switchPriority"
+                                  matTooltip="Determines if character switches quest priority after X level"
+                                  [matTooltipPosition]="'right'">
+                  Should switch priority?
                 </check-box>
+
+                <mat-form-field appearance="outline" class="mb-2">
+                  <mat-label>Switch level</mat-label>
+                  <input type="number" matInput formControlName="switchLevel" />
+                  <mat-error showError [control]="form.switchLevel"></mat-error>
+                </mat-form-field>
+
+                <!-- Normal Quests -->
+
+                <div *ngIf='!expeditionsEnabled'>
+                  <mat-form-field appearance="outline" class="mb-2">
+                    <mat-label>Priority (After Switch)</mat-label>
+                    <mat-select formControlName="priorityAfterSwitch">
+                      <mat-option *ngFor="let priority of questPriority | enum" [value]="priority.value">{{ priority.key | wordSpace }}</mat-option>
+                    </mat-select>
+                    <mat-error showError [control]="form.priorityAfterSwitch"></mat-error>
+                  </mat-form-field>
+                  <mat-form-field appearance="outline" class="mb-2">
+                    <mat-label>Hybrid Ratio (After Switch)</mat-label>
+                    <input matInput type="number" formControlName="hybridRatioAfterSwitch" placeholder="0" min="0" max="1" step="0.05"/>
+                    <mat-error showError [control]="form.hybridRatioAfterSwitch"></mat-error>
+                  </mat-form-field>
+                </div>
+
+                <!-- Expeditions -->
+
+                <div *ngIf='expeditionsEnabled' [formGroup]='form.expeditionOptionsAfterSwitch'>
+                  <mat-form-field appearance="outline" class="mb-2">
+                    <mat-label>Avg Amount of Chests (After Switch)</mat-label>
+                    <input matInput type="number" formControlName="averageAmountOfChests" placeholder="0" step='0.05' min='0' max='2'/>
+                    <mat-error showError [control]="expeditionOptionsAfterSwitch.averageAmountOfChests"></mat-error>
+                  </mat-form-field>
+                  <mat-form-field appearance="outline" class="mb-2">
+                    <mat-label>Avg Star Bonus (After Switch)</mat-label>
+                    <input matInput type="number" formControlName="averageStarExperienceBonus" placeholder="0" step='0.05' min='1' max='1.3'/>
+                    <mat-error showError [control]="expeditionOptionsAfterSwitch.averageStarExperienceBonus"></mat-error>
+                  </mat-form-field>
+                </div>
+
                 <mat-form-field appearance="outline" class="mb-2">
                   <mat-label>Calendar</mat-label>
                   <input matInput formControlName="calendar"/>
@@ -219,6 +266,15 @@
                 </mat-form-field>
                 <check-box formControlName="skipCalendar">
                   Skip Calendar
+                </check-box>
+                <check-box class='pt-2' formControlName="drinkBeerOneByOne">
+                  Drink Beer One By One
+                </check-box>
+                <check-box class='pt-2' formControlName="doWeeklyTasks">
+                  Do Weekly Tasks
+                </check-box>
+                <check-box class='pt-2' formControlName="drinkExtraWeeklyBeer">
+                  Drink Weekly Task Beer
                 </check-box>
                 <!--TO DO-->
                 <!--<check-box class="mt-3" formControlName="simulateDungeon">
