--- a/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
@@ -1,9 +1,8 @@
 <div class="bg-dark">
   <h1 class="pt-3 px-4">Patch Notes: {{version}}</h1>
   <ul class="content" mat-dialog-content>
-    <li>Added support for weekly tasks</li>
-    <li>Fixed a bug causing polling wrong stats in dungeon simulator</li>
-    <li>Improved performance in dungeon simulator</li>
+    <li>Added support for expeditions</li>
+    <li>Added possibility to change hybrid ratio after switching quest priority</li>
   </ul>
   <div class="d-flex justify-content-end" mat-dialog-actions>
     <button [mat-dialog-close] mat-button>Don't care, bye</button>
