Added expeditions header to saved results

--- a/SFSimulator.Web/src/app/layout/simulation-result/saved-simulation-results.component.html
+++ b/SFSimulator.Web/src/app/layout/simulation-result/saved-simulation-results.component.html
@@ -119,7 +119,7 @@
             <div class="w-25 h-100">
               <canvas baseChart
                       [data]="snapshot.totalXPChart.data"
-                      [options]="snapshot.avgXPChart!.options"
+                      [options]="snapshot.totalXPChart!.options"
                       [type]="'bar'">
               </canvas>
             </div>
