--- a/SFSimulator.Web/src/app/layout/simulator/simulator.component.html
+++ b/SFSimulator.Web/src/app/layout/simulator/simulator.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid h-100">
   <div class='row pt-2 g-1 main'>
     <div class='col-lg-4 gs-lg-2'>
-        <simulation-config (configEmitter)='saveForm($event)'></simulation-config>
+        <simulation-config></simulation-config>
     </div>
     <div class='col-lg-8 d-flex flex-column'>
       <div class='mt-3'>
