Disabled automatic patchnotes dialog New patchnotes dialog will be now indicated by a woobly orange patchnotes icon

--- a/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
@@ -1,8 +1,9 @@
 <div class="bg-dark">
   <h1 class="pt-3 px-4">Patch Notes: {{version}}</h1>
   <ul class="content" mat-dialog-content>
-    <li>Added support for expeditions</li>
-    <li>Added possibility to change hybrid ratio after switching quest priority</li>
+    <li>Adjusted expedition's gold cap</li>
+    <li>Added QoL validation in form</li>
+    <li>New patchnotes will be now indicated by an orange woobly icon</li>
   </ul>
   <div class="d-flex justify-content-end" mat-dialog-actions>
     <button [mat-dialog-close] mat-button>Don't care, bye</button>
