--- a/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/patch-notes-dialog/patch-notes-dialog.component.html
@@ -1,9 +1,9 @@
 <div class="bg-dark">
   <h1 class="pt-3 px-4">Patch Notes: {{version}}</h1>
   <ul class="content" mat-dialog-content>
-    <li>Adjusted expedition's gold cap</li>
-    <li>Added QoL validation in form</li>
-    <li>New patchnotes will be now indicated by an orange woobly icon</li>
+    <li>Added items to expeditions</li>
+    <li>Adjusted midway reward from expedition</li>
+    <li>Fixed scrapbook counter to reflect on new EURO items</li>
   </ul>
   <div class="d-flex justify-content-end" mat-dialog-actions>
     <button [mat-dialog-close] mat-button>Don't care, bye</button>
