--- a/SFSimulator.Frontend/Components/DropDown.razor
+++ b/SFSimulator.Frontend/Components/DropDown.razor
@@ -1,6 +1,6 @@
 ﻿@typeparam TValue where TValue : notnull, Enum
 
-<RadzenFormField Component="@Name" Text="@Label" Variant="Variant.Text">
+<RadzenFormField Component="@Name" Text="@Label" Variant="Variant ?? Radzen.Variant.Flat">
     <Start>
     @if (Icon != null)
     {
@@ -19,11 +19,13 @@
     [Parameter]
     public required TValue? Value { get; set; }
     [Parameter]
-    public EventCallback<TValue> ValueChanged { get; set; }
+    public EventCallback<TValue?> ValueChanged { get; set; }
     [Parameter]
     public string? Label { get; set; }
     [Parameter, EditorRequired]
     public required string Name { get; set; }
+    [Parameter]
+    public Variant? Variant { get; set; }
     [Parameter]
     public string Icon { get; set; } = default!;
     [Parameter]
